fixed gaps

--- a/src/brands-carousel/brands-carousel.css
+++ b/src/brands-carousel/brands-carousel.css
@@ -3,16 +3,19 @@
   padding: 0;
   display: flex;
   flex-wrap: nowrap;
+  column-gap: 16px;
 }
 
 @media screen and (1120px > width > 767px) {
   .brands-carousel {
     flex-wrap: wrap;
+    column-gap: calc((100vw - 672px) / 3);
   }
 }
 
 @media screen and (width > 1119px) {
   .brands-carousel {
     flex-wrap: wrap;
+    column-gap: 56px;
   }
 }
